cosmetic Controller_log